--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
+    "redux-persist": "^6.0.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
