--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
