--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,9 @@
       {
         "src": "client/package.json",
         "use": "@vercel/static-build",
-        "config": { "distDir": "client/build" }
+        "config": {
+          "distDir": "client/dist"
+        }
       },
       {
         "src": "api/**/*.js",
