--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "builds": [
       {
         "src": "client/package.json",
@@ -8,18 +9,14 @@
         }
       },
       {
-        "src": "api/**/*.js",
+        "src": "api/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/client/$1"
+        "dest": "/api/index.js"
       }
     ]
   }
