--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,10 @@
       {
         "src": "/api/(.*)",
         "dest": "/api/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/$1"
       }
     ]
   }
